--- a/nextjs/components/Loader/Loader.module.css
+++ b/nextjs/components/Loader/Loader.module.css
@@ -26,11 +26,11 @@
   align-items: center;
   justify-content: center;
   backdrop-filter: blur(4px);
-  background-color: var(--gray0-25);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .full {
-  position: absolute;
+  position: relative;
 }
 
 .fixed {
