--- a/nextjs/components/Section/Section.module.css
+++ b/nextjs/components/Section/Section.module.css
@@ -7,13 +7,14 @@
 }
 
 .firstSection {
-  padding-top: 150px;
+  padding-top: 110px;
 }
 
 /* * */
 /* INNER WRAPPER */
 
 .innerWrapper {
+  position: relative;
   display: flex;
   width: 100%;
   max-width: var(--app-width);
