--- a/nextjs/components/AccountExplorer/AccountExplorer.module.css
+++ b/nextjs/components/AccountExplorer/AccountExplorer.module.css
@@ -3,7 +3,6 @@
 
 .container {
   width: 100%;
-  min-height: 500px;
   background-color: var(--spg-support-3);
 }
 
@@ -15,4 +14,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
