--- a/nextjs/components/BackofficeSidebar/BackofficeSidebar.module.css
+++ b/nextjs/components/BackofficeSidebar/BackofficeSidebar.module.css
@@ -2,18 +2,11 @@
 /* CONTAINER */
 
 .container {
-  position: fixed;
   width: 100%;
-  max-width: 80px;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  gap: var(--size-xs);
   justify-content: flex-start;
-  z-index: 25;
-  overflow-y: auto;
-  background-color: var(--color-reference-0);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 /* * */
@@ -22,9 +15,9 @@
 .logo {
   width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 18px;
+  justify-content: center;
+  padding: var(--size-md);
   border-bottom: 1px solid var(--spg-support-3);
   transition: all 200ms ease;
 }
@@ -42,7 +35,8 @@
   flex-direction: column;
   align-items: center;
   gap: var(--size-md);
-  padding: 20px;
+  padding: var(--size-md);
+  overflow-y: auto;
 }
 
 /* * */
