--- a/nextjs/components/BackofficeWrapper/BackofficeWrapper.module.css
+++ b/nextjs/components/BackofficeWrapper/BackofficeWrapper.module.css
@@ -4,14 +4,17 @@
 .container {
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr;
   background-color: var(--color-reference-0);
 }
 
 /* * */
-/* INNER WRAPPER */
+/* SIDEBAR */
 
-.innerWrapper {
-  width: 100%;
-  height: 100%;
-  padding-left: 50px;
+.sidebarWrapper {
+  z-index: 100;
+  background-color: var(--color-reference-0);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
 }
