--- a/nextjs/components/BackofficeSidebar/BackofficeSidebar.module.css
+++ b/nextjs/components/BackofficeSidebar/BackofficeSidebar.module.css
@@ -4,9 +4,9 @@
 .container {
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: var(--backoffice-header-height) 1fr;
 }
 
 /* * */
