--- a/nextjs/components/FrontendHeader/FrontendHeader.module.css
+++ b/nextjs/components/FrontendHeader/FrontendHeader.module.css
@@ -27,8 +27,8 @@
   justify-content: space-between;
   gap: 50px;
   width: 100%;
-  max-width: var(--app-width);
-  padding: 0 var(--app-padding);
+  max-width: var(--frontend-global-width);
+  padding: 0 var(--frontend-global-padding);
   margin: auto;
 }
 
@@ -60,7 +60,7 @@
   justify-content: space-between;
   gap: 30px;
   width: 100%;
-  max-width: var(--app-width);
-  padding: 10px var(--app-padding);
+  max-width: var(--frontend-global-width);
+  padding: 10px var(--frontend-global-padding);
   margin: auto;
 }
