--- a/nextjs/components/BackofficeWrapperList/BackofficeWrapperList.module.css
+++ b/nextjs/components/BackofficeWrapperList/BackofficeWrapperList.module.css
@@ -19,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
   padding: 10px;
   border-bottom: 1px solid var(--spg-support-3);
 }
