--- a/nextjs/components/BackofficeWrapperListItem/BackofficeWrapperListItem.module.css
+++ b/nextjs/components/BackofficeWrapperListItem/BackofficeWrapperListItem.module.css
@@ -21,44 +21,57 @@
   background-color: var(--spg-support-3);
 }
 
-/* * */
-/* CHEVRON */
-
-.chevron {
-  font-size: 20px;
-  opacity: 0.25;
-  color: var(--spg-support-5);
-}
-
-.isSelected .chevron {
-  opacity: 0.75;
+.isSelected.container,
+.isSelected.container:hover,
+.isSelected.container:active {
+  cursor: default;
+  background-color: var(--spg-support-4);
 }
 
 /* * */
-/* CONTENT WRAPPER */
+/* WRAPPER */
 
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: var(--size-sm);
+  gap: var(--size-xs);
   width: 100%;
 }
 
 /* * */
-/* SELECTED MODE */
+/* TITLE AND SUBTITLE */
 
-.isSelected,
-.isSelected:hover,
-.isSelected:active {
-  cursor: default;
-  background-color: var(--color-gray-1);
+.title {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
-@media (prefers-color-scheme: dark) {
-  .isSelected,
-  .isSelected:hover,
-  .isSelected:active {
-    background-color: var(--color-reference-0);
-  }
+.subtitle {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.2;
+  color: var(--spg-support-4);
+}
+
+.isSelected .title,
+.isSelected .subtitle {
+  color: var(--color-reference-0);
+}
+
+/* * */
+/* CHEVRON */
+
+.chevron {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--spg-support-4);
+}
+
+.isSelected .chevron,
+.isSelected.container:hover .chevron {
+  color: var(--spg-support-3);
 }
