--- a/nextjs/components/FrontendHeaderAcademia/FrontendHeaderAcademia.module.css
+++ b/nextjs/components/FrontendHeaderAcademia/FrontendHeaderAcademia.module.css
@@ -23,7 +23,7 @@
   height: 100%;
   z-index: 9999;
   padding: 10px 20px;
-  background-color: #ffffff;
+  background-color: var(--color-reference-0);
   cursor: pointer;
 }
 
@@ -37,7 +37,7 @@
   left: 0px;
   width: 100%;
   z-index: 10;
-  background-color: #ffffff;
+  background-color: var(--color-reference-0);
   transition: all 300ms ease;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
   border-top: 1px solid var(--spg-support-3);
