--- a/nextjs/components/FrontendSection/FrontendSection.module.css
+++ b/nextjs/components/FrontendSection/FrontendSection.module.css
@@ -3,6 +3,7 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
@@ -11,11 +12,28 @@
 }
 
 /* * */
+/* TITLE */
+
+.title {
+  color: var(--spg-brand-2);
+  font-size: 40px;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1.3;
+  letter-spacing: 2px;
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid var(--spg-brand-2);
+  margin: 20px 0;
+}
+
+/* * */
 /* INNER WRAPPER */
 
 .innerWrapper {
   position: relative;
   display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: var(--frontend-global-width);
   padding: 0 var(--frontend-global-padding);
