--- a/nextjs/components/FrontendNewsGridFeatured/FrontendNewsGridFeatured.module.css
+++ b/nextjs/components/FrontendNewsGridFeatured/FrontendNewsGridFeatured.module.css
@@ -2,5 +2,40 @@
 /* CONTAINER */
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: stretch;
+  align-items: stretch;
+  border: 1px solid transparent;
+  transition: all 300ms ease;
+  min-height: 200px;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  background-color: var(--spg-support-3);
+}
+
+.container:hover {
+  border-color: var(--spg-brand-1);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+}
+
+/* * */
+/* IMAGE WRAPPER */
+
+.imageWrapper {
+  position: relative;
   width: 100%;
+  background-color: blue;
+}
+
+/* * */
+/* CONTENT WRAPPER */
+
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 15px;
+  padding: 30px;
 }
