--- a/nextjs/components/FrontendWrapperInner/FrontendWrapperInner.module.css
+++ b/nextjs/components/FrontendWrapperInner/FrontendWrapperInner.module.css
@@ -3,8 +3,8 @@
 
 .container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: var(--color-reference-0);
+  gap: 30px;
+  padding-bottom: 60px;
 }
