--- a/nextjs/styles/defaults.css
+++ b/nextjs/styles/defaults.css
@@ -16,7 +16,7 @@
   --color-reference-0: #ffffff;
   --color-reference-1: #000000;
   /* STATE */
-  --color-state-success: #000000;
+  --color-state-success: #3ca06e;
   --color-state-success-background: rgba(0, 0, 0, 0.25);
   --color-state-warning: #ffffff;
   --color-state-warning-background: rgba(0, 0, 0, 0.25);
