--- a/nextjs/components/Text/Text.module.css
+++ b/nextjs/components/Text/Text.module.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   font-weight: 500;
   text-align: left;
-  line-height: 1.4;
+  line-height: 1.3;
   color: var(--color-reference-1);
 }
 
@@ -14,6 +14,23 @@
 /* DEFAULT */
 
 .default {
+  color: var(--color-reference-1);
+}
+
+/* * */
+/* FORM SECTION TITLE */
+
+.formSectionTitle {
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--color-reference-1);
+}
+
+/* * */
+/* FORM SECTION DESCRIPTION */
+
+.formSectionDescription {
+  font-size: 14px;
   color: var(--color-reference-1);
 }
 
